feat(font): updates font

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -75,7 +75,11 @@ body[a="light"] { @include light-appearance; }
 html { height: 100%; }
 
 body {
-  font-family: monospace;
+  font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+
   font-size: 16px;
   line-height: 1.4;
   margin: 0;
