--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,4 +22,7 @@
   {{ range .Site.Params.custom_css -}}
     <link rel="stylesheet" href="{{ . | relURL }}">
   {{- end }}
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
